feat: add vector2 to store uv

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,7 @@ set ( SOURCE
     src/scene.h
     src/sphere.h
     src/utils.h
-    src/vector3.h
+    src/vector.h
     src/triangle.h
     src/bbox.h
     src/texture.h
